# pulqui-limiter.vst3

./: .gitmodules  CHANGELOG.txt  CMakeLists.txt  README.md  xcodehack.txt
.github/scripts/: package.bat  package.sh
.github/workflows/: cmake.yml
pulquicrossover-src/: CMakeLists.txt  plug.uidesc  plugcontroller.cpp  plugcontroller.h  plugfactory.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  pulqui.cpp  version.h
pulquicrossover2-src/: CMakeLists.txt  plug.uidesc  plugcontroller.cpp  plugfactory.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  version.h
pulquicrossover3-src/: CMakeLists.txt  plug.uidesc  plugcontroller.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  version.h
pulquicrossover4-src/: CMakeLists.txt  plug.uidesc  plugcontroller.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  pulqui.cpp  version.h
pulquilimiter-src/: CMakeLists.txt  CMakeLists.txt.old  plug.uidesc  plugcontroller.cpp  plugcontroller.h  plugfactory.cpp  plugids.h  plugprocessor.cpp  plugprocessor.h  pulqui.cpp  version.h
pulquilimiter-src/include/: plugcontroller.h  plugids.h  plugprocessor.h  version.h
pulquilimiter-src/resource/: plug.uidesc
pulquilimiter-src/source/: plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp  pulqui.cpp
